Updated the ColorBandSetViewModel, UpdateCutoff method to not set the PreviousCutoff on the SuccessorColorBand, but to instead set the CurrentColorBand property before updating the value so that the ColorBandSetViewModel's CurrentColorBand_PropertyChanged event handler can set the PreviousCutoff on the SuccessorColorBand

--- a/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MSetExplorer"
+             xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:ColorBandSetViewModel}"
              mc:Ignorable="d" 
              d:DesignWidth="290">
 
