--- a/src/MSetExplorer/ColorBandSet/ColorBandSetUserControl.xaml
+++ b/src/MSetExplorer/ColorBandSet/ColorBandSetUserControl.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MSetExplorer"
+             xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:ColorBandSetViewModel}"
+             
+             
              xmlns:lt="clr-namespace:MSS.Types;assembly=MSS.Types"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="290">
