--- a/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
+++ b/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="MSetExplorer.XPoc.PerformanceHarnessMainWindow"
+﻿<Window x:Class="MSetExplorer.XPoc.PerformanceHarness.PerformanceHarnessMainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MSetExplorer.XPoc"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DataContext="{d:DesignInstance Type=local:PerformanceHarnessMainWinViewModel}"
+        xmlns:local="clr-namespace:MSetExplorer.XPoc.PerformanceHarness"
         mc:Ignorable="d"
-        Title="PerformanceHarnessMainWindow" Height="750" Width="800">
+        Title="Performance Harness" Height="775" Width="800">
     <Grid>
-
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -17,14 +17,22 @@
         <Border Grid.Row="0" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button Name="btnOne" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="RunHome_Click" IsCancel="True">Run _Home Job</Button>
-                <Button Name="btnTwo" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="RunDense_Click" IsCancel="True">Run _Dense LC2</Button>
+                <Button Name="btnOne" HorizontalAlignment="Center" Width="150" FontSize="16" Margin="10" Click="RunHome_Click" IsCancel="True">Run _Home Job</Button>
+                <Button Name="btnTwo" HorizontalAlignment="Center" Width="150" FontSize="16" Margin="10" Click="RunDense_Click" IsCancel="True">Run _Dense LC4</Button>
             </StackPanel>
 
         </Border>
 
+        <Border Grid.Row="1" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
-        <StackPanel Grid.Row="1" Orientation="Vertical" Margin="0,10,5,10">
+            <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                <CheckBox Margin="5,0,10,0" IsChecked="{Binding UseEscapeVelocities}" >Calculate Escape Velocities</CheckBox>
+                <CheckBox Margin="5,0,10,0" IsChecked="{Binding SaveTheZValues}">Save The ZValues</CheckBox>
+            </StackPanel>
+
+        </Border>
+
+        <StackPanel Grid.Row="2" Orientation="Vertical" Margin="0,10,5,10">
 
             <!--<StackPanel Orientation="Horizontal" >
                 <TextBlock Width="145" Margin="3" FontSize="14" Text="Peak MapSections:" />
@@ -118,7 +126,7 @@
 
         </StackPanel>
 
-        <Border Grid.Row="2" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Border Grid.Row="3" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                 <Button Name="btnClose" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="CloseButton_Click" IsCancel="True">_Close</Button>
