--- a/src/MSetExplorer/JobProgress/JobProgressControl.xaml
+++ b/src/MSetExplorer/JobProgress/JobProgressControl.xaml
@@ -15,7 +15,7 @@
         <Border x:Name="borderTop" BorderThickness="0.5" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="80"/>
+                    <RowDefinition Height="100"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
@@ -35,16 +35,22 @@
 
                         <ProgressBar x:Name="prgBarCurrentJob" Height="12" Margin="10,5,10,0"/>
 
-
                         <StackPanel Orientation="Horizontal" Margin="10,5,10,0">
                             <!--<TextBlock Text="So Far:" Width="38" Margin="10,0,5,0" VerticalAlignment="Top"/>-->
-                            <TextBox Text="{Binding RunTime, Mode=OneWay}" Margin="0,0,15,0" Width="85"/>
+                            <TextBox Text="{Binding RunTime, Mode=OneWay}" Margin="0,0,5,0" Width="95"/>
 
                             <!--<TextBlock Text="Remaining:" Width="63" Margin="5, 0" VerticalAlignment="Top"/>-->
-                            <TextBox Text="{Binding EstimatedTimeRemaining, Mode=OneWay}"  Width="85" />
+                            <TextBox Text="{Binding EstimatedTimeRemaining, Mode=OneWay}"  Width="95" />
 
-                        </StackPanel>                        
-                        
+                        </StackPanel>
+
+                        <StackPanel Orientation="Horizontal" Margin="10,5,5,0">
+                            <TextBlock >Iterations Per Second:</TextBlock>
+                            <TextBox Text="{Binding IterationsPerSecond, Mode=OneWay, StringFormat={}{0:N0}}" Margin="10,0,0,0" Width="75"/>
+
+                        </StackPanel>
+
+
                     </StackPanel>
                 </Border>
 
